--- a/styles/austyle.css
+++ b/styles/austyle.css
@@ -19,6 +19,7 @@ background-size: cover;
 background-repeat: no-repeat;
 background-position: center;
 background-attachment: fixed;
+border-radius: 12px;
 }
 
 main{
@@ -49,18 +50,29 @@ text-align: center;
 flex: 1;
 }
 
+nav.extPLinks ul {
+padding: 0;
+list-style-type: none;
+flex: 2;
+}
+
+img.fbLogo, img.igLogo, img.xLogo, img.tiktokLogo{
+height: 30px;
+width:30px;
+}
+
 nav.intPLinks li a {
 text-decoration: none;
 color: white;
 }
 
-
-button.dropdbtn, button.pageNav1, button.pageNav2, button.pageNav3 {
+a.dropdbtn, a.pageNav1, a.pageNav2, a.pageNav3 {
 background-color: #74837c;
 color: white;
-padding: 16px;
+padding: 10px;
 font-size: 16px;
 border: none;
+border-radius: 12px;
 cursor: pointer;
 }
 
@@ -94,6 +106,7 @@ header{
 top: 0;
 position: fixed; /*If I change to sticky, will need to alter width to 100%. Absolute is fine on its own.*/
 width: 85%;
+background-color: black;
 }
 
 footer{
@@ -101,8 +114,10 @@ bottom: 0;
 text-align: center;
 position: fixed; /*can remove this if I want footer to remain at bottom and unseen unless I scroll, will need to adjust width to 100% if so*/
 width: 85%; /*will need to change to 100% if position is removed*/
+background-color: red;
+color: black;
 }
 
-header, footer {
-background-color:black;
+header, footer{
+border-radius: 8px;
 }
