Applied some draft content to homepage. Applied flex properties to respond with windows size.

--- a/styles/austyle.css
+++ b/styles/austyle.css
@@ -98,7 +98,7 @@ div.dropdown:hover div.dropdown-links{
 display: block;
 }
 
-div.dropdown:hover button.dropdbtn{
+div.dropdown:hover a.dropdbtn{
 background-color: rgb(150, 52, 52);
 }
 
