--- a/styles/hstyle.css
+++ b/styles/hstyle.css
@@ -1,7 +1,6 @@
 html {
 font-size: 14px; /* px means "pixels": the base font size is now 10 pixels high */
 font-family: "Open Sans", sans-serif; /* this should be the rest of the output you got from Google Fonts */
-color:white;
 background-color: blueviolet;
 background-color:rgb(0, 0, 0);
 background-image: url("../images/bg1.jpg");
@@ -19,16 +18,31 @@ min-height: 100vh;
 display: flex;
 flex-direction: column;
 background-color: black;
-border-radius: 8px;
+border-radius: 8px; /*rounds edges*/
+color: white;
 }
 
 main{
 padding: 9rem; /*keeps elements from going under heading*/
 text-align: center;
+display: inline-block;
 }
 
 h1.pageheading{
 text-align: center;
+}
+
+hr{
+border-color: #22e182; /*colours hr line break*/
+}
+
+article{
+margin-bottom: 1em;
+margin-right: 1em;
+}
+
+p.mangaText, p.animeText{
+text-align:justify;
 }
 
 div.dropdown{
@@ -99,8 +113,29 @@ div.dropdown:hover div.dropdown-links{
 display: block;
 }
 
-div.dropdown:hover button.dropdbtn{
+div.dropdown:hover a.dropdbtn{
 background-color: rgb(150, 52, 52);
+}
+
+article.a1, article.a2{
+border-radius: 8px;
+flex: 200px; /*this is its default size, will shrink along with window to fit space available*/
+}
+
+article.a1{
+background-color: rgb(97, 87, 87);
+padding: 1%;
+}
+
+article.a2{
+background-color: rgb(212, 125, 125);
+padding: 1%;
+}
+
+section{
+display: flex;
+flex-direction:row; /*aligns elements inside section (articles in this case) as rows as default*/
+flex-wrap: wrap;
 }
 
 header{
