--- a/styles/austyle.css
+++ b/styles/austyle.css
@@ -74,6 +74,7 @@ font-size: 16px;
 border: none;
 border-radius: 12px;
 cursor: pointer;
+text-shadow: 2px 2px 2px #000000;   
 }
 
 div.dropdown-links{
@@ -107,6 +108,7 @@ top: 0;
 position: fixed; /*If I change to sticky, will need to alter width to 100%. Absolute is fine on its own.*/
 width: 85%;
 background-color: black;
+padding-bottom: 14px;
 }
 
 footer{
