--- a/styles/custyle.css
+++ b/styles/custyle.css
@@ -77,6 +77,7 @@ font-size: 16px;
 border: none;
 border-radius: 12px;
 cursor: pointer;
+text-shadow: 2px 2px 2px #000000;   
 }
 
 div.dropdown-links{
