--- a/styles/hstyle.css
+++ b/styles/hstyle.css
@@ -89,6 +89,7 @@ font-size: 16px;
 border: none;
 border-radius: 12px;
 cursor: pointer;
+text-shadow: 2px 2px 2px #000000;   
 }
 
 div.dropdown-links{
@@ -113,7 +114,7 @@ div.dropdown:hover div.dropdown-links{
 display: block;
 }
 
-div.dropdown:hover a.dropdbtn{
+div.dropdown:hover a.dropdbtn{/*colours button when hovering with cursor*/
 background-color: rgb(150, 52, 52);
 }
 
@@ -143,13 +144,14 @@ top: 0;
 position: fixed; /*If I change to sticky, will need to alter width to 100%. Absolute is fine on its own.*/
 width: 85%;
 background-color: black;
+/*border: /*solid 1px white; in case I want to add a border colour around the header*/ 
 }
 
 footer{
 bottom: 0;
 text-align: center;
-position: fixed; /*can remove this if I want footer to remain at bottom and unseen unless I scroll, will need to adjust width to 100% if so*/
-width: 85%; /*will need to change to 100% if position is removed*/
+position: fixed; /* footer will remain in view with fixed position as I scroll. Can remove this or change to static or relative if I want footer to remain at the end of page and unseen, will need to adjust width to 100% if so*/
+width: 85%; /*will need to change to 100% if position is removed. Not needed if position is "relative" or "static"*/
 background-color: red;
 color: black;
 }
