--- a/styles/hstyle.css
+++ b/styles/hstyle.css
@@ -30,6 +30,7 @@ display: inline-block;
 
 h1.pageheading{
 text-align: center;
+padding-bottom: 20px;
 }
 
 hr{
@@ -53,9 +54,10 @@ display: inline-block;
 
 nav.intPLinks ul {
 padding: 0;
+/*no need to use display:flex as I'm controlling button spacing with margin-direction:[number]em*/
 list-style-type: none;
 flex: 2;
-display: flex;
+display:block;/*using display:block keeps buttons close together, using display:flex pushes them apart*/
 text-align: center;
 }
 
@@ -89,7 +91,9 @@ font-size: 16px;
 border: none;
 border-radius: 12px;
 cursor: pointer;
-text-shadow: 2px 2px 2px #000000;   
+text-shadow: 2px 2px 2px #000000;
+margin-left: 1.5em;/*controls spacing in desired direction*/
+margin-right: 1.5em;
 }
 
 div.dropdown-links{
@@ -144,7 +148,8 @@ top: 0;
 position: fixed; /*If I change to sticky, will need to alter width to 100%. Absolute is fine on its own.*/
 width: 85%;
 background-color: black;
-/*border: /*solid 1px white; in case I want to add a border colour around the header*/ 
+padding-bottom: 14px;
+/*border: /*solid 1px white; in case I want to add a border colour around the header*/
 }
 
 footer{
