--- a/styles/hstyle.css
+++ b/styles/hstyle.css
@@ -37,9 +37,16 @@ hr{
 border-color: #22e182; /*colours hr line break*/
 }
 
+img.picex{
+width: 50%;/*images will remain the same size as long as I use a percentage that can be equally divided by the same number of images I have*/
+height: auto;
+}
+
 article{
 margin-bottom: 1em;
 margin-right: 1em;
+border-radius: 8px;
+flex: 200px; /*this is its default size, will shrink along with window to fit space available*/
 }
 
 p.mangaText, p.animeText{
@@ -120,11 +127,6 @@ display: block;
 
 div.dropdown:hover a.dropdbtn{/*colours button when hovering with cursor*/
 background-color: rgb(150, 52, 52);
-}
-
-article.a1, article.a2{
-border-radius: 8px;
-flex: 200px; /*this is its default size, will shrink along with window to fit space available*/
 }
 
 article.a1{
