--- a/styles/oreckz.css
+++ b/styles/oreckz.css
@@ -42,10 +42,12 @@ margin-right: 0.5em;
 }
 
 img.adwn{
-height: auto;
-width:30px;
 position: relative;
-top: -90px;/*allows me to manipulate position in x amount of pixels from chosen direction in element along with their being an alignment set in html*/
+top: -30px;/*allows me to manipulate position in x amount of pixels from chosen direction in element along with their being an alignment set in html*/
+right: 160px;
+border-radius: 8px;
+width: 30px;
+height: 30px;
 }
 
 div.dropdown{
@@ -85,8 +87,9 @@ flex: 2;
 }
 
 img.fbLogo, img.igLogo, img.xLogo, img.tiktokLogo{
-height: 30px;
-width:30px;
+height: 25px;
+width:25px;
+border-radius: 8px;
 }
 
 a.dropdbtn, a.pageNav1, a.pageNav2, a.pageNav3 {
@@ -161,9 +164,9 @@ animation: shake 0.4s ease-out; /*animation to trigger upon click*/
 
 }
 
-a.a1:hover, a.a2:hover, a.a3:hover, a.a4:hover, a.a5:hover, a.a6:hover, a.a7:hover, a.a8:hover {
+a.a1:hover, a.a2:hover, a.a3:hover, a.a4:hover, a.a5:hover, a.a6:hover, a.a7:hover, a.a8:hover, a.pageNav1:hover{
 color: yellow;
-box-shadow: 0 5px yellow;
+box-shadow: 2px 4px yellow;
 transform: translateY(2px);
 text-shadow: 2px 2px 2px #000000;   
 }
@@ -216,6 +219,7 @@ background-size:cover;
 background-position-y: 25%; /*to be specific about the part of background image I wish to show*/
 background-repeat: no-repeat;
 background-attachment: scroll;
+display:flex;/*use of display:flex stops content (for example the age rating image logo) from changing element size of which it resides*/
 }
 
 a.a7{/*Drama genre*/
@@ -242,11 +246,12 @@ border-radius: 8px;
 
 header{
 top: 0;
-position: fixed; /*If I change to sticky, will need to alter width to 100%. Absolute is fine on its own.*/
+position: absolute; /*If I change to sticky, will need to alter width to 100%. Absolute is fine on its own.*/
 width: 85%;
-background-color: black;
+background-color: rgb(65, 61, 61);
 padding-bottom: 14px;
 /*border: /*solid 1px white; in case I want to add a border colour around the header*/ 
+text-align: right;
 }
 
 footer{
