--- a/styles/austyle.css
+++ b/styles/austyle.css
@@ -102,6 +102,7 @@ background-color: #22e182;
 
 div.dropdown:hover div.dropdown-links{
 display: block;
+border-radius: 8px;
 }
 
 div.dropdown:hover a.dropdbtn{
