--- a/styles/indexstyle.css
+++ b/styles/indexstyle.css
@@ -123,6 +123,7 @@ background-color: #22e182;
 
 div.dropdown:hover div.dropdown-links{
 display: block;
+border-radius: 8px;
 }
 
 div.dropdown:hover a.dropdbtn{/*colours button when hovering with cursor*/
