--- a/styles/f-ma.css
+++ b/styles/f-ma.css
@@ -113,10 +113,12 @@ div.dropdown:hover a.dropdbtn{/*colours button when hovering with cursor*/
 background-color: rgb(150, 52, 52);
 }
 
-img.dbz, img.ktmd, img.ka, img.bakitg{
-width: 100%;/*images will remain the same size as long as I use a percentage that can be equally divided by the same number of images I have*/
+section article img{/*no need to call each image through their class this way*/
+width: 100%;/*images will go as big as possible and stay capped at the max width next line regardless of fullscreen/halfscreen*/
+max-width: 300px;
 height: auto;
 border-radius: 8px;
+box-shadow: 2px 4px rgb(141, 27, 27);
 }
 
 article{
@@ -125,6 +127,15 @@ margin-right: 1em;
 border-radius: 8px;
 flex: 200px; /*this is its default size, will shrink along with window to fit space available*/
 cursor: pointer;
+}
+
+section article p{
+text-align: center;
+background-color: #1822a5;
+}
+
+div.infoHide1, div.infoHide2, div.infoHide3, div.infoHide4{/*elements inside specified container is automatically hidden*/
+display: none;
 }
 
 section{
