--- a/styles/sports.css
+++ b/styles/sports.css
@@ -115,10 +115,12 @@ div.dropdown:hover a.dropdbtn{
 background-color: rgb(150, 52, 52);
 }
 
-img.hni, img.es21, img.bluelck, img.kb{
-width: 100%;/*images will remain the same size as long as I use a percentage that can be equally divided by the same number of images I have*/
+section article img{/*no need to call each image through their class this way*/
+width: 100%;/*images will go as big as possible and stay capped at the max width next line regardless of fullscreen/halfscreen*/
+max-width: 300px;
 height: auto;
 border-radius: 8px;
+box-shadow: 2px 4px rgb(141, 27, 27);
 }
 
 article{
@@ -126,6 +128,16 @@ margin-bottom: 1em;
 margin-right: 1em;
 border-radius: 8px;
 flex: 200px; /*this is its default size, will shrink along with window to fit space available*/
+cursor: pointer;
+}
+
+section article p{
+text-align: center;
+background-color: #1822a5;
+}
+
+div.infoHide1, div.infoHide2, div.infoHide3, div.infoHide4{/*elements inside specified container is automatically hidden*/
+display: none;
 }
 
 section{
