--- a/styles/h-s.css
+++ b/styles/h-s.css
@@ -117,27 +117,33 @@ background-color: rgb(150, 52, 52);
 
 section article img{/*no need to call each image through their class this way*/
 width: 100%;/*images will go as big as possible and stay capped at the max width next line regardless of fullscreen/halfscreen*/
-max-width: 300px;
+max-width: 200px;
 height: auto;
 border-radius: 8px;
 box-shadow: 2px 4px rgb(141, 27, 27);
+float: left;
+cursor: pointer;
 }
 
 article{
 margin-bottom: 1em;
 margin-right: 1em;
 border-radius: 8px;
-flex: 200px; /*this is its default size, will shrink along with window to fit space available*/
-cursor: pointer;
+flex:auto;/*was necessary so that I can display the information about the shows to the side as originally intended*/
+}
+
+h1.sr{
+text-align: center;
+max-width: 500px;
+width:100%;
 }
 
 section article p{
-text-align: center;
+text-align:start;
+max-width: 500px;
+width:100%;
+height: auto;
 background-color: #1822a5;
-}
-
-div.infoHide1, div.infoHide2, div.infoHide3, div.infoHide4{/*elements inside specified container is automatically hidden*/
-display: none;
 }
 
 section{
@@ -148,7 +154,12 @@ margin-bottom: 1em;
 margin-right: 1em;
 border-radius: 8px;
 margin: auto;/*to center section*/
+text-align: center;
 /* flex:[number]px isn't needed due to article element having it.*/
+}
+
+div.infoHide1, div.infoHide2, div.infoHide3, div.infoHide4{/*elements inside specified container is automatically hidden*/
+display: none;
 }
 
 header{
