--- a/styles/music.css
+++ b/styles/music.css
@@ -26,6 +26,7 @@ main{
 padding: 9rem; /*keeps elements from going under heading*/
 text-align: center;
 display: inline-block;
+flex: auto;/*if there's a need for resizability on elements*/
 }
 
 h1.pageheading{
@@ -33,17 +34,10 @@ text-align: center;
 padding-bottom: 20px;
 }
 
-
-a.a1, a.a2, a.a3, a.a4, a.a5, a.a6, a.a7, a.a8{
-margin-bottom: 0.5em; /*allows you to create space between articles in the specified direction of margin*/
-margin-right: 0.5em;
-}
-
 div.dropdown{
 position: relative;
 display: inline-block;
 }
-
 
 nav.intPLinks ul {
 padding: 0;
@@ -61,11 +55,6 @@ flex: 1;
 }
 
 nav.intPLinks li a {
-text-decoration: none;
-color: white;
-}
-
-a{
 text-decoration: none;
 color: white;
 }
@@ -117,11 +106,11 @@ display: block;
 border-radius: 8px;
 }
 
-div.dropdown:hover a.dropdbtn{
+div.dropdown:hover a.dropdbtn{/*colours button when hovering with cursor*/
 background-color: rgb(150, 52, 52);
 }
 
-section article img{/*no need to call each image through their class this way*/
+img.ylia, img.so-euph{
 width: 100%;/*images will go as big as possible and stay capped at the max width next line regardless of fullscreen/halfscreen*/
 max-width: 200px;
 height: auto;
@@ -131,26 +120,53 @@ float: left;
 cursor: pointer;
 }
 
+img.beck, img.bctr{
+width: 100%;/*images will go as big as possible and stay capped at the max width next line regardless of fullscreen/halfscreen*/
+max-width: 200px;
+height: auto;
+border-radius: 8px;
+box-shadow: 2px 4px rgb(141, 27, 27);
+float: right;
+cursor: pointer;
+}
+
 article{
 margin-bottom: 1em;
 margin-right: 1em;
 border-radius: 8px;
-flex:400px;/*was necessary so that I can display the information about the shows to the side as originally intended*/
+flex:400px;/*was necessary so that I can display the information about the shows to the side as originally intended, also so that I may space articles where necessary*/
 }
 
 h1.sr{
-text-align: center;
 max-width: 500px;
 width:100%;
 }
 
-section article p, section article h4{/*refers to paragraph and heading in relevant path*/
-text-align:start;
+section article h4{/*refers to paragraph and heading in relevant path*/
+text-align:center;
 max-width: 500px;
 width:100%;
 height: auto;
 background-color: #1822a5;
-display: inline;/* makes sure relevant heading and paragraph show on the same line*/
+}
+
+h4.sri{
+display: inline;
+margin-right: 1rem;
+}
+
+p.sria{
+display: inline;
+}
+
+p.summary{
+text-align:justify;
+max-width: 500px;
+width:100%;
+}
+
+#expand1, #expand2, #expand3, #expand4{
+display: none;
 }
 
 section{
