--- a/styles/austyle.css
+++ b/styles/austyle.css
@@ -3,7 +3,6 @@ font-size: 14px; /* px means "pixels": the base font size is now 10 pixels high 
 font-family: "Open Sans", sans-serif; /* this should be the rest of the output you got from Google Fonts */
 color:white;
 background-color: blueviolet;
-
 }
 
 body {
@@ -20,16 +19,36 @@ background-repeat: no-repeat;
 background-position: center;
 background-attachment: fixed;
 border-radius: 12px;
+
 }
 
 main{
 padding: 9rem; /*keeps elements from going under heading*/
-text-align: center;
+text-align: justify;
 }
 
 h1.pageheading{
 text-align: center;
-padding-bottom: 20px;
+}
+
+div.secbr{/*to create space where intended*/
+margin-bottom: 1rem;
+}
+
+#BTTBtn{
+display: none;
+position: sticky;
+bottom:150px;
+float: right;
+border: none;
+cursor: pointer;
+padding: 12px;
+background: gray;
+color: white;
+}
+
+#BTTBtn:hover{
+background-color: black;
 }
 
 div.dropdown{
@@ -69,6 +88,11 @@ text-decoration: none;
 color: white;
 }
 
+a{
+text-decoration: underline;
+color: inherit;/*takes the colour which the page is using*/
+}
+
 a.dropdbtn, a.pageNav1, a.pageNav2, a.pageNav3 {
 background-color: #74837c;
 color: white;
@@ -86,7 +110,7 @@ div.dropdown-links{
 display:none;
 position: absolute;
 background-color: #1822a5;
- min-width: 160px;
+min-width: 160px;
 }
 
 div.dropdown-links a{
@@ -120,10 +144,10 @@ padding-bottom: 14px;
 footer{
 bottom: 0;
 text-align: center;
-position: fixed; /*can remove this if I want footer to remain at bottom and unseen unless I scroll, will need to adjust width to 100% if so*/
-width: 85%; /*will need to change to 100% if position is removed*/
+width: 100%; /*will need to change to 100% if position is removed*/
 background-color: red;
 color: black;
+margin-top: -6rem;/*used to bring footer up to save scroll space*/
 }
 
 header, footer{
