--- a/styles/home.css
+++ b/styles/home.css
@@ -41,24 +41,16 @@ text-align: center;
 padding-bottom: 20px;
 }
 
-hr{
-border-color: #22e182; /*colours hr line break*/
-}
-
-img.picex{
-width: 50%;/*images will remain the same size as long as I use a percentage that can be equally divided by the same number of images I have*/
-height: auto;
-}
 
 article{
 margin-bottom: 1em;
 margin-right: 1em;
 border-radius: 8px;
-flex: 200px; /*this is its default size, will shrink along with window to fit space available*/
+flex: auto; /*this is its default size, will shrink along with window to fit space available*/
 }
 
-p.mangaText, p.animeText{
-text-align:justify;
+iframe{
+border-radius: 8px;
 }
 
 div.dropdown{
@@ -143,15 +135,6 @@ div.dropdown:hover a.dropdbtn{/*colours button when hovering with cursor*/
 background-color: rgb(150, 52, 52);
 }
 
-article.a1{
-background-color: rgb(97, 87, 87);
-padding: 1%;
-}
-
-article.a2{
-background-color: rgb(212, 125, 125);
-padding: 1%;
-}
 
 section{
 display: flex;
